unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__C3_Frequency_Units2__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__C3_Frequency_Units2__c</fullName>
        <description>C3 - #2 Frequency Units</description>
        <inlineHelpText>C3 - #2 Frequency Units</inlineHelpText>
        <label>C3 - #2 Frequency Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>per second</fullName>
                </value>
                <value>
                    <fullName>per minute</fullName>
                </value>
                <value>
                    <fullName>per hour</fullName>
                </value>
                <value>
                    <fullName>per day</fullName>
                </value>
                <value>
                    <fullName>per week</fullName>
                </value>
                <value>
                    <fullName>per month</fullName>
                </value>
                <value>
                    <fullName>per year</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>