unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__C3_Route_Used1__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__C3_Route_Used1__c</fullName>
        <description>C3 - #1 Route Used</description>
        <inlineHelpText>C3 - #1 Route Used</inlineHelpText>
        <label>C3 - #1 Route Used</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auricular (otic)</fullName>
                </value>
                <value>
                    <fullName>Buccal</fullName>
                </value>
                <value>
                    <fullName>Cutaneous</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Endocervical</fullName>
                </value>
                <value>
                    <fullName>Endosinusial</fullName>
                </value>
                <value>
                    <fullName>Endotracheal</fullName>
                </value>
                <value>
                    <fullName>Epidural</fullName>
                </value>
                <value>
                    <fullName>Extra-amniotic</fullName>
                </value>
                <value>
                    <fullName>Hemodialysis</fullName>
                </value>
                <value>
                    <fullName>Intra corpus cavernosum</fullName>
                </value>
                <value>
                    <fullName>Intra-amniotic</fullName>
                </value>
                <value>
                    <fullName>Intra-arterial</fullName>
                </value>
                <value>
                    <fullName>Intra-articular</fullName>
                </value>
                <value>
                    <fullName>Intra-uterine</fullName>
                </value>
                <value>
                    <fullName>Intracardiac</fullName>
                </value>
                <value>
                    <fullName>Intracavernous</fullName>
                </value>
                <value>
                    <fullName>Intracerebral</fullName>
                </value>
                <value>
                    <fullName>Intracervical</fullName>
                </value>
                <value>
                    <fullName>Intracisternal</fullName>
                </value>
                <value>
                    <fullName>Intracorneal</fullName>
                </value>
                <value>
                    <fullName>Intracoronary</fullName>
                </value>
                <value>
                    <fullName>Intradermal</fullName>
                </value>
                <value>
                    <fullName>Intradiscal (intraspinal)</fullName>
                </value>
                <value>
                    <fullName>Intrahepatic</fullName>
                </value>
                <value>
                    <fullName>Intralesional</fullName>
                </value>
                <value>
                    <fullName>Intralymphatic</fullName>
                </value>
                <value>
                    <fullName>Intramedullar (bone marrow)</fullName>
                </value>
                <value>
                    <fullName>Intrameningeal</fullName>
                </value>
                <value>
                    <fullName>Intramuscular</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>