unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__C4_Therapy_Dates_Start_Date1__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__C4_Therapy_Dates_Start_Date1__c</fullName>
        <description>C4 - #1 Therapy Dates - Start Date</description>
        <inlineHelpText>C4 - #1 Therapy Dates - Start Date</inlineHelpText>
        <label>C4 - #1 Therapy Dates - Start Date</label>
        <type>Date</type>
    </CustomField>