unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__C4_Therapy_Dates_Start_Date1_Null__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__C4_Therapy_Dates_Start_Date1_Null__c</fullName>
        <description>C4 - #1 Therapy Dates - Start Date Null</description>
        <inlineHelpText>C4 - #1 Therapy Dates - Start Date Null</inlineHelpText>
        <label>C4 - #1 Therapy Dates - Start Date Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>