unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__C5_Diagnosis_for_Use2__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__C5_Diagnosis_for_Use2__c</fullName>
        <description>C5 - #2 Diagnosis for Use</description>
        <inlineHelpText>C5 - #2 Diagnosis for Use</inlineHelpText>
        <label>C5 - #2 Diagnosis for Use</label>
        <length>500</length>
        <type>LongTextArea</type>
    </CustomField>