unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__C6_Is_the_Product_Compounded1__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__C6_Is_the_Product_Compounded1__c</fullName>
        <description>C6 - #1 Is the Product Compounded?</description>
        <inlineHelpText>C6 - #1 Is the Product Compounded?</inlineHelpText>
        <label>C6 - #1 Is the Product Compounded?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>