unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__C7_Is_the_Product_Over_the_Counter2__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__C7_Is_the_Product_Over_the_Counter2__c</fullName>
        <description>C7 - #2 Is the Product Over-the-Counter?</description>
        <inlineHelpText>C7 - #2 Is the Product Over-the-Counter?</inlineHelpText>
        <label>C7 - #2 Is the Product Over-the-Counter?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>