unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__C8_Exp_Date1__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__C8_Exp_Date1__c</fullName>
        <description>C8 - #1 Exp. Date</description>
        <inlineHelpText>C8 - #1 Exp. Date</inlineHelpText>
        <label>C8 - #1 Exp. Date</label>
        <type>Date</type>
    </CustomField>