unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__C8_Exp_Date1_Null__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__C8_Exp_Date1_Null__c</fullName>
        <description>C8 - #1 Exp. Date Null</description>
        <inlineHelpText>C8 - #1 Exp. Date Null</inlineHelpText>
        <label>C8 - #1 Exp. Date Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>