unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__C9_Evt_Abated_After_Use_Stopped1__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__C9_Evt_Abated_After_Use_Stopped1__c</fullName>
        <description>C9 - #1 Evt Abated After Use Stopped?</description>
        <inlineHelpText>C9 - #1 Evt Abated After Use Stopped?</inlineHelpText>
        <label>C9 - #1 Evt Abated After Use Stopped?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Doesn't Apply</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>