unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__CMPL123_WF_Action_Performed_By__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__CMPL123_WF_Action_Performed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workflow Action Performed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CMPL123CMEMDRcCMPL123_Users</relationshipName>
        <type>Lookup</type>
    </CustomField>