unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__D10_Date_returned_to_MFG__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__D10_Date_returned_to_MFG__c</fullName>
        <description>Date that the manufacturer received the affected device.</description>
        <label>D10 - Date returned to Mfg</label>
        <type>Date</type>
    </CustomField>