unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__D10_Date_Returned_to_Mfg_Null__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__D10_Date_Returned_to_Mfg_Null__c</fullName>
        <description>Used if the date of device return is not being provided in the report or if the device was not returned to the manufacturer.</description>
        <label>D10 - Date Returned to Mfg Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>