unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__D10_Device_available_for_Eval__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__D10_Device_available_for_Eval__c</fullName>
        <description>Indicates if the affected device is available for evaluation by the manufacturer.</description>
        <label>D10 - Device available for Eval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>