unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__D11_Concomitant_Null__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__D11_Concomitant_Null__c</fullName>
        <description>Used if no concomitant products were reported.</description>
        <label>D11 - Concomitant Product Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>