unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__D1_Brand_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__D1_Brand_Name__c</fullName>
        <description>Marketed product name.</description>
        <label>D1 - Brand Name</label>
        <length>80</length>
        <type>Text</type>
    </CustomField>