unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__D2_Common_Device_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__D2_Common_Device_Name__c</fullName>
        <description>Generic category of a device.</description>
        <label>D2 - Common Device Name</label>
        <length>80</length>
        <type>Text</type>
    </CustomField>