unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__D2b_Procode__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__D2b_Procode__c</fullName>
        <description>3 character code assigned to a device based on the medical device product classification.</description>
        <label>D2b - Procode</label>
        <length>3</length>
        <type>Text</type>
    </CustomField>