unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__D3_Address__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__D3_Address__c</fullName>
        <description>Manufacturer address, line 1.</description>
        <label>D3 - Address 1</label>
        <length>30</length>
        <type>Text</type>
    </CustomField>