unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__D3_Country__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__D3_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manufacturer country.</description>
        <label>D3 - Country</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CMPL123CME__Complaint_Code__c.CMPL123CME__Type__c</field>
                <operation>equals</operation>
                <value>COUNTRY CODE</value>
            </filterItems>
            <filterItems>
                <field>CMPL123CME__Complaint_Code__c.CMPL123CME__Inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Search/Select Country Code only</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123CME__Complaint_Code__c</referenceTo>
        <relationshipLabel>EMDR (D3 - Country)</relationshipLabel>
        <relationshipName>EMDR2</relationshipName>
        <type>Lookup</type>
    </CustomField>