unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__D3_Email__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__D3_Email__c</fullName>
        <description>Manufacturer email.</description>
        <label>D3 - Email</label>
        <type>Email</type>
    </CustomField>