unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__D3_Fax_Number__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__D3_Fax_Number__c</fullName>
        <description>Manufacturer fax number.</description>
        <label>D3 - Fax Number</label>
        <type>Phone</type>
    </CustomField>