unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__D3_Fax_Number_Null__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__D3_Fax_Number_Null__c</fullName>
        <description>Used if the manufacturer fax number is not being provided in the report.</description>
        <label>D3 - Fax Number Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>