unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__D3_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__D3_Name__c</fullName>
        <description>Manufacturer name.</description>
        <label>D3 - Name</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>